V1.5.1 Hotfix
Bugfixes
- Fixed AI spamming Trade Agreement
- Localiaztion fixes in One Child Policy
- Fixed released nations not being able to initalize custom political content
- Fixed issue in Greek tree where the clamp_variable was not correctly assigned


v1.5 'Economic Prowess & Man the Guns' - 1.10 compatible
AI
- Tweaked AI ratio of mils to civs to prevent frequent conversion
- Tweaked AI for Intelligence Agency
- Add AI division limiter
- Improved economic AI with tax rates
- Improved Economic AI with peace time decisions
- AI should now properly take and buy down debt
- Baltic countries no longer leave NATO immediately
- Overhaul of unit building AI
- New AI strategies to get the AI to manage their budgets better if they need to
- AI is now more likely to embargo other nations
- Trade AI - AI likely to make trade agreement
- Improved Influence/Investment AI for new nations
- Functioning AI for MTG ships
- Better AI for Fuel management
- AI uses more planes now
- better AI management to prevent influence spam
- Better Unit AI
- Improved combat AI to ensure proper wars
- Improved Trade AI. AI should be more likely to import oil in peace and during war to ensure fuel and a reason to actually have oil
- AI will now dynamically reject economic aid based on opinion and other factors
- AI Ukraine will now build units in 2017 start date to defend itself against Russia.

Bugfixes
- Fixed missing Algerian party icon
- Fixed missing texticon error with subunits
- Corrected Rwanda/Tanzania not having Commonwealth of Nations Ideas
- Fixed missing Malawi party
- Fix bailout event not updating interest rates
- Some minor fixes to 3D models
- Fix the Feedback Exploit to Tax Cost
- Fix names of Guatemala's leaders not showing up
- Fix Macedonia not having a core on its Eastern state
- Fix being unable to take the highest level corruption
- Fixed some general influence bugs
- Fixed several backend UI bugs