@@ -6166,8 +6166,8 @@
  L_Strike_fighter4_desc: "Light Jet Bombers are actually designed as trainers. However, converted to carry an offensive payload, they are usable for Close Air Support, especially against an opponent without an airforce of their own, such as insurgents."
  L_Strike_fighter5: "Light Jet 2035"
  L_Strike_fighter5_desc: "Light Jet Bombers are actually designed as trainers. However, converted to carry an offensive payload, they are usable for Close Air Support, especially against an opponent without an airforce of their own, such as insurgents."
- CV_L_Strike_fighterequipment: "Carrier Light Jet"
- CV_L_Strike_fighterequipment_desc: "§GCarrier Compatible§!\n\nLight fighters are fighter aircraft towards the low end of the practical range of weight, cost, and complexity over which fighters are fielded."
+ CV_L_Strike_fighter_equipment: "Carrier Light Jet"
+ CV_L_Strike_fighter_equipment_desc: "§GCarrier Compatible§!\n\nLight fighters are fighter aircraft towards the low end of the practical range of weight, cost, and complexity over which fighters are fielded."
  CV_L_Strike_fighter1: "Light Jet CV 1975"
  CV_L_Strike_fighter1_desc: "Light Jet Bombers are actually designed as trainers. However, converted to carry an offensive payload, they are usable for Close Air Support, especially against an opponent without an airforce of their own, such as insurgents."
  CV_L_Strike_fighter2: "Light Jet CV 1995"
