@@ -4163,3 +4163,4 @@
  VICTORY_POINTS_13290: "San Marino"
  VICTORY_POINTS_12951: "Campo Grande"
  VICTORY_POINTS_3311: "Douglas"
+ VICTORY_POINTS_4872: "Winnipeg"
