@@ -4,7 +4,8 @@ Bugfixes
 - Localiaztion fixes in One Child Policy
 - Fixed released nations not being able to initalize custom political content
 - Fixed issue in Greek tree where the clamp_variable was not correctly assigned
-
+- Corrected Winnipeg's name
+- Fixed Light Striker Fighter carrier category name not showing up
 
 v1.5 'Economic Prowess & Man the Guns' - 1.10 compatible
 AI
